--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -267,6 +267,7 @@
 <div class="footer text-center">
   <div class="container">
     <div class="row">
+
       <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 disclaimer">
         <!--<strong>Copyright notices: </strong>&nbsp;-->
         Grepolis is a browser game by InnoGames GmbH. This is an unofficial 3rd party site
@@ -282,6 +283,14 @@
         &nbsp; | &nbsp;
         <a class="a-link-dialog" routerLink="/analytics">Statistics</a>
       </div>
+
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+
+      powered by <a class="a-link" href="https://camiel.dev" target="_blank">camiel.dev</a>
+      <br/>
     </div>
   </div>
 </div>
