--- a/src/app/indexer/ops/commands/commands.component.html
+++ b/src/app/indexer/ops/commands/commands.component.html
@@ -146,6 +146,11 @@
                   Loading view
                 </div>
                 <div class="active-view-filters" *ngIf="active_view">
+
+<!--                  <app-alert type="info2" [dismissible]="true">-->
+<!--                    <span class="gd-secondary">GrepoData will be offline for maintenance on <strong>November 24, 2023 from 19:00 UTC until 21:00 UTC.</strong><br/></span>-->
+<!--                  </app-alert>-->
+
                   <div class="filter-header">
                     <h3 style="margin: 3px 0 !important;">
                       <mat-icon class="dm-hidden" style="vertical-align: text-bottom; color: #18BC9C">filter_list</mat-icon>
