--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -123,6 +123,14 @@
 <!--          </p>-->
 <!--        </app-alert>-->
 
+
+<!--        <app-alert type="warning" title="GrepoData Maintenance Downtime" [dismissible]="false">-->
+<!--          <p>-->
+<!--            All GrepoData services will be temporarily offline on <strong>November 24, 2023 from 19:00 UTC until 21:00 UTC.</strong><br/>-->
+<!--            We are performing a scheduled server migration.-->
+<!--          </p>-->
+<!--        </app-alert>-->
+
         <div class="container-fluid text-center" id="player_scoreboard" style="width: 100% !important;">
           <div *ngIf="loadingPlayers" style="position: relative; top: -40px; height: 0px;">
             <br/><mat-progress-bar mode="indeterminate"></mat-progress-bar>
